# aoc-2021

./: .gitignore  Cargo.toml  LICENSE
src/: day01.rs  day01_sonar.rs  day02_directions.rs  day03_power.rs  day04_squid_bingo.rs  day05_lines.rs  day06.rs  day07_sub_fuel.rs  day08_segment_display.rs  day09_basins.rs  day10_delims.rs  day11_oct_flash.rs  day12_cave_search.rs  day13_folds.rs  day14_pairs.rs  day15_risks.rs  day16_bits.rs  day17_probe.rs  day18_snailfish.rs  quine.rs
