[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01_sonar.rs"

[[bin]]
name = "day02"
path = "src/day02_directions.rs"

[[bin]]
name = "day03"
path = "src/day03_power.rs"

[[bin]]
name = "day04"
path = "src/day04_squid_bingo.rs"

[[bin]]
name = "day05"
path = "src/day05_lines.rs"

[[bin]]
name = "day06"
path = "src/day06_fishies.rs"

[[bin]]
name = "day07"
path = "src/day07_sub_fuel.rs"

[[bin]]
name = "quine"
path = "src/quine.rs"

[dependencies]
