[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01_sonar.rs"

[[bin]]
name = "day02"
path = "src/day02_directions.rs"

[[bin]]
name = "day03"
path = "src/day03_power.rs"

[[bin]]
name = "day04"
path = "src/day04_squid_bingo.rs"

[[bin]]
name = "day05"
path = "src/day05_lines.rs"

[[bin]]
name = "day06"
path = "src/day06_fishies.rs"

[[bin]]
name = "day07"
path = "src/day07_sub_fuel.rs"

[[bin]]
name = "day08"
path = "src/day08_segment_display.rs"

[[bin]]
name = "day09"
path = "src/day09_basins.rs"

[[bin]]
name = "day10"
path = "src/day10_delims.rs"

[[bin]]
name = "day11"
path = "src/day11_oct_flash.rs"

[[bin]]
name = "day12"
path = "src/day12_cave_search.rs"

[[bin]]
name = "day13"
path = "src/day13_folds.rs"

[[bin]]
name = "quine"
path = "src/quine.rs"

[dependencies]
